--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "compression": "^1.8.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.3",
+    "multer": "^2.0.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
