--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "buildCommand": "npm run build:client",
     "outputDirectory": "dist/spa",
     "rewrites": [
@@ -10,5 +11,6 @@
             "source": "/(.*)",
             "destination": "/index.html"
         }
-    ]
+    ],
+    "cleanUrls": true
 }
