--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:client && npm run build:server",
+    "build": "pnpm run build:client && pnpm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
-    "verify": "npm run typecheck && npm run build",
+    "verify": "pnpm run typecheck && pnpm run build",
     "prod:check": "node -e \"if(!process.env.JWT_SECRET || process.env.JWT_SECRET.includes('change')) { console.error('❌ JWT_SECRET not set properly!'); process.exit(1); } else { console.log('✅ Environment check passed'); }\""
   },
   "dependencies": {
