--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "buildCommand": "npm run build:client",
+    "buildCommand": "pnpm run build:client",
     "outputDirectory": "dist/spa",
     "rewrites": [
         {
