--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
 
 # Environment
-NODE_ENV=development
+NODE_ENV=production
 
 
 # Database
