--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,11 @@
     "version": 2,
     "buildCommand": "npm run build:client",
     "outputDirectory": "dist/spa",
+    "functions": {
+        "api/*.ts": {
+            "runtime": "vercel-node@latest"
+        }
+    },
     "rewrites": [
         {
             "source": "/api/(.*)",
