--- a/package.json
+++ b/package.json
@@ -34,9 +34,19 @@
     "serverless-http": "^3.2.0",
     "vite": "^7.1.2",
     "@vitejs/plugin-react-swc": "^4.0.0",
-    "zod": "^3.25.76"
-  },
-  "devDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1",
+    "lucide-react": "^0.539.0",
+    "framer-motion": "^12.23.12",
+    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "@swc/core": "^1.13.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.25.76",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -67,9 +77,23 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
-    "@swc/core": "^1.13.3",
-    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.2",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
+    "next-themes": "^0.4.6",
+    "react-day-picker": "^9.8.1",
+    "react-hook-form": "^7.62.0",
+    "react-resizable-panels": "^3.0.4",
+    "recharts": "^2.12.7",
+    "sonner": "^1.7.4",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
+    "vaul": "^1.1.2"
+  },
+  "devDependencies": {
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
@@ -79,34 +103,8 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/three": "^0.176.0",
-    "autoprefixer": "^10.4.21",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.23.12",
-    "globals": "^16.3.0",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.539.0",
-    "next-themes": "^0.4.6",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "react": "^18.3.1",
-    "react-day-picker": "^9.8.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.62.0",
-    "react-resizable-panels": "^3.0.4",
-    "react-router-dom": "^6.30.1",
-    "recharts": "^2.12.7",
-    "sonner": "^1.7.4",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.176.0",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
-    "vaul": "^1.1.2",
     "vitest": "^3.2.4"
   }
 }
